:lipstick: fix: photo-modal scrollbar width

--- a/src/styles/components/home/_photos.scss
+++ b/src/styles/components/home/_photos.scss
@@ -72,6 +72,10 @@
     animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 750ms
       forwards;
   }
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 }
 
 @keyframes slide-bottom {
